# board_game_base

./: .gitignore  README.md  pyproject.toml  setup.cfg
board/: __init__.py
board/hexagon/: orientation.py
board/primitives/: coordinate.py  coordinates.py  orientation.py  point.py
board/square/: directions.py  orientation.py  point.py
board/structure/primitives/: __init__.py  coordinate.py  coordinates.py  exceptions.py  orientation.py  point.py
board/structure/square/: __init__.py  directions.py  orientation.py  point.py
hexagon/: orientation.py
item/: __init__.py  actor.py
item/base/: __init__.py  item.py  movable.py  named_mixin.py
player/: __init__.py  player.py
primitives/: coordinate.py  coordinates.py  point.py
primitives/tests/: test_coordinate.py  test_orientation.py  test_point.py
square/: directions.py  orientation.py  point.py
square/tests/: test_point.py
tests/board/structure/primitives/: test_coordinate.py  test_orientation.py  test_point.py
tests/board/structure/square/: test_point.py
tests/item/base/: test_item.py  test_movable.py
tests/primitives/: test_coordinate.py  test_orientation.py  test_point.py
tests/square/: test_point.py
